# cms-fraud-detection

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  pull_request_template.md
.github/agents/: ai-engineer.agent.md  bug-fixer.agent.md  code-reviewer.agent.md  data-scientist.agent.md  docs-writer.agent.md  frontend-dev.agent.md  security-auditor.agent.md  senior-developer.agent.md  technical-pm.agent.md  test-engineer.agent.md
.github/workflows/: ci-frontend.yml  ci.yml  deploy.yml  pipeline.yml  pr-title.yml  sbom.yml  secrets.yml  security.yml  terraform.yml
data/models/: isolation_forest.joblib
data/validation/: anomaly_results.json  retrospective_results.json  weak_supervised_results.json
db/: init.sql
db/migrations/: 001_add_raw_tables_pipeline_tracking.sql
docs/: SPRINT-PLAN.md  accessibility-report.md  ai-oss-disclosure.md  architecture-v2.md  architecture-v3.md  dataset-catalog.md  demo-data-research-plan.md  demo-script.md  development-process.md  hackathon-kickoff.md  hybrid-scoring-methodology.md  model-card-isolation-forest.md  open-questions.md  path-to-cms-pilot.md  personas.md  problem-statement.md  responsible-ai-considerations.md  risk-scoring-methodology.md  team-kickoff-brief-2026-03-12.docx  team-kickoff-brief.md
frontend/: .dockerignore  .gitignore  .npmrc  Dockerfile  README.md  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  (+1 more)
k8s/: argocd-app.yaml
manifests/: postgres.yml
scripts/: generate_synthetic_data.py
terraform/: bootstrap.sh  ecr.tf  iam.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_ai_questions.py  test_anomaly.py  test_anomaly_scorer.py  test_app_lifespan.py  test_audit.py  test_auth.py  test_bedrock.py  test_build_demo_case_csv.py  test_build_features.py  test_cases.py  test_chart_spec.py  test_chat.py  test_claim_score_details.py  test_claims.py  test_cluster_endpoint.py  test_column_maps.py  test_dashboard.py  test_db_schema.py  test_deps.py  test_etl.py  test_explainability.py  test_extract.py  test_fairness.py  test_graph.py  test_graph_client.py  test_ingest.py  test_live.py  test_live_queue_seed.py  test_load_postgres.py  test_narrative.py  test_network.py  test_network_endpoint.py  test_orchestrator.py  test_project_graph.py  test_provider_score_details.py  test_providers.py  test_raw_loader.py  test_retrospective.py  test_schemas.py  test_score.py  (+10 more)
(+183 files in other folders)
