[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cms-fraud-detection"
version = "0.1.0"
description = "Proactive CMS provider fraud detection with explainable AI"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "shap>=0.45",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
gpu = [
    "torch>=2.4",
]
etl = [
    "duckdb>=1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
