[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "cms-fraud-detection"
version = "0.1.0"
description = "Proactive CMS provider fraud detection with explainable AI"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyarrow>=17.0",
    "neo4j>=5.0",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pip-audit>=2.7",
    "bandit>=1.7",
    "mypy>=1.11",
    "cyclonedx-bom>=4.0",
]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "shap>=0.45",
]
gpu = [
    "torch>=2.4",
]
etl = [
    "duckdb>=1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/data/build_demo_case_csv.py" = ["E501"]  # embedded SQL strings
"src/data/load_postgres.py" = ["E501"]  # formatted output strings
"tests/test_build_features.py" = ["E501"]  # embedded CSV test data

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B608"]  # SQL injection — false positive on DuckDB file-path f-strings

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
